fix tables header on mobile

--- a/frontend/src/views/admin/cover/users/AdminUsers.css
+++ b/frontend/src/views/admin/cover/users/AdminUsers.css
@@ -1,5 +1,5 @@
 #component-content.admin-users-container {
-  max-width: 1000px;
+  max-width: 1100px;
 }
 
 .tooltip-container {
@@ -32,26 +32,9 @@
   opacity: 1;
 }
 
-@media (max-width: 768px) {
-  table {
-    display: block;
-    overflow-x: auto;
-    white-space: nowrap;
-  }
-
-  thead,
-  tbody {
-    display: block;
-  }
-
-  th,
-  td {
-    min-width: 120px;
-  }
-}
 
 .active-user {
-  background-color: #f0f0f0;
+  background-color: #c9e4f7;
 }
 
 .actions {
